syntax="proto3";
package coreproto;
option go_package="./coreproto";

import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";


service CoreRpc {
    rpc Ping(google.protobuf.Empty) returns (google.protobuf.Empty) {}
    
    rpc CreateCollection(CollectionSpec) returns (CollectionResponse) {}
    rpc DropCollection(CollectionName) returns (Response) {}
    rpc CollectionInfof(CollectionName) returns (CollectionMsg) {}

    rpc LoadCollection(CollectionName) returns (CollectionMsg) {}
    rpc ReleaseCollection(CollectionName) returns (ResponseWithMessage) {}

    rpc Insert(DatasetChange) returns (Response) {}
    rpc Update(DatasetChange) returns (Response) {}
    rpc Delete(DatasetChange) returns (Response) {}

    rpc VectorSearch(SearchRequest) returns (SearchResponse) {}
    rpc FilterSearch(SearchRequest) returns (SearchResponse) {}
    rpc HybridSearch(SearchRequest) returns (SearchResponse) {}

    rpc CompareDist(CompXyDist) returns (XyDist) {}
}

message CompXyDist {
    repeated float vector_x=1;
    repeated float vector_y=2;
    Distance dist=3;
}
message XyDist {
    float score=1;
}

message DatasetChange {
    string id=1;
    string collection_name=2;
    repeated float vector=3;
    google.protobuf.Struct metadata=4;
    IndexChangeTypes index_change_types=5;
}

message CollectionName {
    string collection_name=1;
    bool with_size=2;
}

message CollectionResponse {
    bool status = 1;
    CollectionSpec spec = 2;
    Error error=3;
}

message CollectionSpec {
    string collection_name=1;
    HnswConfig collection_config=2;
    uint32 vector_dimension=3;
    Distance distance=4;
    Quantization compression_helper=5;
}

message HnswConfig {
    SearchAlgorithm search_algorithm=1;
    float level_multiplier=2;
    int32 ef=3;
    int32 ef_construction=4;
    int32 m=5;
    int32 m_max=6;
    int32 m_max0=7;
    bool heuristic_extend_candidates=8;
    bool heuristic_keep_pruned=9;
}

message ResponseWithMessage {
    bool status=1;
    string message=2;
    Error error=3;
}

message Response {
    bool status=1;
    Error error=2;
}

message Error {
    string error_message=1;
    ErrorCode error_code=2;
}


enum SearchAlgorithm {
    Simple=0;
    Heuristic=1;
}

enum Distance {
    Cosine=0;
    Euclidean=1;
}

enum Quantization {
    None=0;
    F16=1;
    F8=2;
    BF16=3;
    PQ=4;
    BQ=5;
}

enum ErrorCode {
    UNDEFINED=0; // check error message
    RPC_ERROR=1;
    COMMUNICATION_SHARD_RPC_ERROR=2;
    COMMUNICATION_SHARD_ERROR=3;
    MARSHAL_ERROR=4;
    INTERNAL_FUNC_ERROR=5;
}

enum IndexChangeTypes {
    INSERT=0;
    UPDATE=1;
    DELETE=2;
}

message SearchRequest {
    string collection_name=1;
    repeated float vector=2;
    uint64 topK=3;
    float min_score_threshold=4;
    map<string,string> filter=5;
    bool with_latency=6;
}


message Candidates {
    string id = 1;
    google.protobuf.Struct metadata=2;
    float score=3;
}

message SearchResponse {
    bool status=1;
    Error error=2;
    repeated Candidates candidates=3;
    string latency=4;
}

message CollectionMsg {
    bool status=1;
    CollectionInfo info=2;
    Error error=3;
}

message CollectionInfo {
    string collection_name=1;
    HnswConfig collection_config=2;
    uint32 vector_dimension=3;
    Distance distance=4;
    Quantization compression_helper=5;
    string collection_size=6;
    uint64 collection_length=7;
}
